CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Torch REQUIRED)

SET(src strarray.c)
SET(luasrc init.lua)

ADD_TORCH_PACKAGE(strarray "${src}" "${luasrc}")

TARGET_LINK_LIBRARIES(strarray luaT TH)
IF(LUALIB)
  TARGET_LINK_LIBRARIES(strarray ${LUALIB})
ENDIF()
